fixed body width on mobile

--- a/src/sass/_common.sass
+++ b/src/sass/_common.sass
@@ -21,6 +21,7 @@ body
 		position: fixed
 		left: 0
 		top: 0
+		width: 100%
 
 // .loader
 // 	display: none
